Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbsinfo {
    long  sramnum;          
    struct {
        char  sramname[12]; 
        long  sramsize;     
        short divnumber;    
        char  fname[6][16]; 
    } info[8];
} ODBSINFO;
typedef struct odbdsdir {
    long    file_num ;
    long    remainder ;
    short   data_num ;
    struct {
        char    file_name[16] ;
        char    comment[64] ;
        long    size ;
        char    date[16] ;
    } data[32] ;
} ODBDSDIR ;
typedef struct iodbdsset {
	char host_ip[16] ;
	char host_uname[32] ;
	char host_passwd[32] ;
	char host_dir[128] ;
	char dtsv_mac[13] ;
	char dtsv_ip[16] ;
	char dtsv_mask[16] ;
} IODBDSSET ;
typedef struct odbdsmnt {
	long empty_cnt ;
	long total_size ;
	long read_ptr ;
	long write_ptr ;
} ODBDSMNT ;
typedef struct odbpser {
    long    poserr1 ;
    long    poserr2 ;
} ODBPSER ;
typedef struct odbspdi {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDI ;
typedef struct odbspdo {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDO ;
typedef struct odbsvfback {
        short   dummy;
        short   dtype;
        long    fback[MAX_AXIS];
        long    afback[MAX_AXIS];
} ODBSVFBACK;
typedef struct iodbwave {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   delay ;
    short   t_range ;
    struct {
        short   kind ;
        union {
#if MAX_AXIS > 16
            long        axis ;
#else
            short       axis ;
#endif
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
    } ch[12] ;
} IODBWAVE ;
typedef struct iodbwvprm {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   reserve1 ;
    long    delay ;
    long    t_range ;
    struct {
        short   kind ;
        union {
            long    axis ;
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
        long    reserve2 ;
    } ch[12] ;
} IODBWVPRM ;
typedef struct odbwvdt {
    short   channel ;
    short   kind ;
    union {
        short   axis ;
        struct {
            char    adr ;
            char    bit ;
            short   no ;
        } io ;
    } u ;
    char    year ;
    char    month ;
    char    day ;
    char    hour ;
    char    minute ;
    char    second ;
    short   t_cycle ;
    short   data[8192] ;
} ODBWVDT ;
typedef struct odbmgrp {
	long  m_code ;
	short grp_no ;
	char  m_name[21] ;
	char  dummy ;
} ODBMGRP;
typedef struct idbmgrp {
	short s_no ;
	short dummy ;
	short num ;
	short group[500] ;
} IDBMGRP ;
typedef struct odbptime {
	short	num;
	struct{
		long	prg_no;
		short	hour;
		char	minute;
		char	second;
	}data[10];
} ODBPTIME;
typedef struct prgdirtm {
	long	prg_no;
	char	comment[51];
	char	cuttime[13];
} PRGDIRTM;
typedef struct prgdir2 {
	short	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2;
typedef struct prgdir3 {
	long	number ;
	long	length ;
	long	page ;
	char	comment[52] ;
	struct{
		short	year;
		short	month;
		short	day;
		short	hour;
		short	minute;
		short	dummy;
	} mdate;
	struct{
		short	year;
		short	month;
		short	day;
		short	hour;
		short	minute;
		short	dummy;
	} cdate;
} PRGDIR3;
typedef struct iodbcprm {
	char           NcApli[65] ;
	char           Dummy1 ;
	char           HostApli[65] ;
	char           Dummy2 ;
	unsigned long  StatPstv ;
	unsigned long  StatNgtv ;
	unsigned long  Statmask ;
	unsigned long  AlarmStat ;
	unsigned long  PsclHaddr ;
	unsigned long  PsclLaddr ;
	unsigned short SvcMode1 ;
	unsigned short SvcMode2 ;
	long           FileTout ;
	long           RemTout ;
} IODBCPRM ;
typedef	struct  iodbint {
	short   datano_s;	
	short   type;		
	short   datano_e;	
	long	data[24];	
} IODBINT ;
typedef struct iodbwcsf {
     short	datano;         
     short	type;           
     long	data[MAX_AXIS]; 
} IODBWCSF;
typedef struct odbomif {
	unsigned short	om_max ;   
	unsigned short	om_sum ;   
	unsigned short	om_char ;  
} ODBOMIF ;
typedef struct odbomhis {
	short	om_no;	
	short	year;	
	short	month;	
	short	day;	
	short	hour;	
	short	minute;	
	short	second;	
	char	om_msg[256];	
} ODBOMHIS ;
typedef	struct	iodbbto {
	short datano_s;		
	short type;		
	short datano_e;		
	long  ofs[18];		
} IODBBTO ;	
typedef	struct  odbbtlinf {
	short	ofs_type;	
	short	use_no;		
	short	sub_no;		
} ODBBTLINF ;
typedef struct odbbaxis {
	short		flag ;        
	short		command ;     
	unsigned short	speed ;       
	long		sub_data ;    
} ODBBAXIS ;
typedef struct odbsyss {
     char    slot_no_p[16];
     char    slot_no_l[16];
     short   module_id[16];
     short   soft_id[16];
     char    soft_series[16][5];
     char    soft_version[16][5];
     short   soft_inst;
     char    boot_ser[5];
     char    boot_ver[5];
     char    servo_ser[5];
     char    servo_ver[5];
     char    pmc_ser[5];
     char    pmc_ver[5];
     char    ladder_ser[5];
     char    ladder_ver[5];
     char    mcrlib_ser[5];
     char    mcrlib_ver[5];
     char    mcrapl_ser[5];
     char    mcrapl_ver[5];
     char    spl1_ser[5];
     char    spl1_ver[5];
     char    spl2_ser[5];
     char    spl2_ver[5];
     char    spl3_ser[5];
     char    spl3_ver[5];
     char    c_exelib_ser[5];
     char    c_exelib_ver[5];
     char    c_exeapl_ser[5];
     char    c_exeapl_ver[5];
     char    int_vga_ser[5];
     char    int_vga_ver[5];
     char    out_vga_ser[5];
     char    out_vga_ver[5];
     char    pmm_ser[5];
     char    pmm_ver[5];
     char    pmc_mng_ser[5];
     char    pmc_mng_ver[5];
     char    pmc_shin_ser[5];
     char    pmc_shin_ver[5];
     char    pmc_shout_ser[5];
     char    pmc_shout_ver[5];
     char    pmc_c_ser[5];
     char    pmc_c_ver[5];
     char    pmc_edit_ser[5];
     char    pmc_edit_ver[5];
     char    lddr_mng_ser[5];
     char    lddr_mng_ver[5];
     char    lddr_apl_ser[5];
     char    lddr_apl_ver[5];
     char    spl4_ser[5];
     char    spl4_ver[5];
     char    mcr2_ser[5];
     char    mcr2_ver[5];
     char    mcr3_ser[5];
     char    mcr3_ver[5];
     char    eth_boot_ser[5];
     char    eth_boot_ver[5];
     char    reserve[8][5];
} ODBSYSS ;
typedef struct prgdir2o8 {
	long	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2O8;
FWLIBAPI short WINAPI cnc_renameprog( unsigned short, long, long );
FWLIBAPI short WINAPI cnc_rdactpt( unsigned short, long * , long * );
 FWLIBAPI short WINAPI cnc_rduvactpt( unsigned short, long * , long *, long * );
FWLIBAPI short WINAPI cnc_wractpt( unsigned short, long, short, long * );
FWLIBAPI short WINAPI cnc_getsraminfo( unsigned short, ODBSINFO * ) ;
FWLIBAPI short WINAPI cnc_sramgetstart( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_sramgetstart2( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_sramget( unsigned short, short *, void *, long * ) ;
FWLIBAPI short WINAPI cnc_sramget2( unsigned short, short *, void *, long * ) ;
FWLIBAPI short WINAPI cnc_sramgetend( unsigned short ) ;
FWLIBAPI short WINAPI cnc_sramgetend2( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvftpget( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpput( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdpgdir( unsigned short, char *, short, ODBDSDIR * ) ;
FWLIBAPI short WINAPI cnc_dtsvdelete( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvdownload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvupload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvcnclupdn( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvupdnstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvgetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvrdset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvwrset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvchkdsk( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvhdformat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvsavecram( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdcram( unsigned short, long, long *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvmntinfo( unsigned short, ODBDSMNT * ) ;
FWLIBAPI short WINAPI cnc_dtsvgetmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetmode( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_dtsvrderrmsg( unsigned short, short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvwrfile( unsigned short, char *, char *,short );
FWLIBAPI short WINAPI cnc_dtsvrdfile( unsigned short, char *, char *,short );
FWLIBAPI short WINAPI cnc_rdloopgain( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsrvspeed( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdopmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs2( unsigned short, ODBPSER * ) ;
FWLIBAPI short WINAPI cnc_rdposerrz( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrsy( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrrg( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdspdlalm( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdctrldi( unsigned short, ODBSPDI * ) ;
FWLIBAPI short WINAPI cnc_rdctrldo( unsigned short, ODBSPDO * ) ;
FWLIBAPI short WINAPI cnc_rdnspdl( unsigned short, short * ) ;
 FWLIBAPI short WINAPI cnc_rdsvfeedback(unsigned short, short, ODBSVFBACK * );
FWLIBAPI short WINAPI cnc_rdfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_wrfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wavestart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestop( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestat( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwavedata( unsigned short, short, short, long, long *, ODBWVDT * ) ;
FWLIBAPI short WINAPI cnc_rdmgrpdata( unsigned short, short, short *, ODBMGRP * ) ;
FWLIBAPI short WINAPI cnc_wrmgrpdata( unsigned short, IDBMGRP * ) ;
FWLIBAPI short WINAPI cnc_rdproctime( unsigned short, ODBPTIME * ) ;
FWLIBAPI short WINAPI cnc_rdprgdirtime( unsigned short, long *, short *, PRGDIRTM * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir2( unsigned short, short, short *, short *, PRGDIR2 * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir3( unsigned short, short, long *, short *, PRGDIR3 * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir4( unsigned short, short, long, short *, PRGDIR4 * ) ;
FWLIBAPI short WINAPI cnc_rddncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_wrdncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_wrcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_rdcomlogmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomopemsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdrcvmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdsndmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_sendmessage( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_clrmsgbuff( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdrcvstat( unsigned short, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_rdintchk( unsigned short, short, short, short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_wrintchk( unsigned short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_rdintinfo( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdshft( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdshft( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdsfms( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdsfms( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_stopomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_startomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdomhisinfo( unsigned short, ODBOMIF * ) ;
FWLIBAPI short WINAPI cnc_rdomhistry( unsigned short, unsigned short, unsigned short *, ODBOMHIS * ) ;
FWLIBAPI short WINAPI cnc_clearomhis( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdbtofsr( unsigned short, short, short, short, short, IODBBTO * ) ;
FWLIBAPI short WINAPI cnc_wrbtofsr( unsigned short, short, IODBBTO * ) ;
FWLIBAPI short WINAPI cnc_rdbtofsinfo( unsigned short, ODBBTLINF * ) ;
FWLIBAPI short WINAPI cnc_rdbaxis( unsigned short, ODBBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rdsyssoft( unsigned short, ODBSYSS * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir2o8( unsigned short, short, long *, short *, PRGDIR2O8 * ) ;
#define cnc_rdprogdir2	cnc_rdprogdir2o8