Agent - fanuc iSeries/Fwlib/160/fwlib32.bas


' read S-RAM information on CNC
Declare Function cnc_getsraminfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSINFO)

' start of reading S-RAM data from CNC
Declare Function cnc_sramgetstart% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read S-RAM data from CNC
Declare Function cnc_sramget% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, b As Byte, c&)

' end of reading S-RAM data from CNC
Declare Function cnc_sramgetend% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start of reading S-RAM data from CNC (2)
Declare Function cnc_sramgetstart2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read S-RAM data from CNC (2)
Declare Function cnc_sramget2% Lib "fwlib32.dll" (ByVal FlibHndl%, a%, b As Byte, c&)

' end of reading S-RAM data from CNC (2)
Declare Function cnc_sramgetend2% Lib "fwlib32.dll" (ByVal FlibHndl%)

' transfer a file from host computer to CNC by FTP
Declare Function cnc_dtsvftpget% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$)

' transfer a file from CNC to host computer by FTP
Declare Function cnc_dtsvftpput% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$)

' get transfer status for FTP
Declare Function cnc_dtsvftpstat% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read file directory in Data Server
Declare Function cnc_dtsvrdpgdir% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b%, Odb As ODBDSDIR)

' delete files in Data Server
Declare Function cnc_dtsvdelete% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' down load from CNC (transfer a file from CNC to MMC)
Declare Function cnc_dtsvdownload% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' up load to CNC (transfer a file from MMC to CNC)
Declare Function cnc_dtsvupload% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' close upload/download between Data Server and CNC
Declare Function cnc_dtsvcnclupdn% Lib "fwlib32.dll" (ByVal FlibHndl%)

' get transfer status for up/down load
Declare Function cnc_dtsvupdnstat% Lib "fwlib32.dll" (ByVal FlibHndl%)

' get file name for DNC operation in Data Server
Declare Function cnc_dtsvgetdncpg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' set program number of DNC oparation to CNC
Declare Function cnc_dtsvsetdncpg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read setting data for Data Server
Declare Function cnc_dtsvrdset% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As IODBDSSET)

' write setting data for Data Server
Declare Function cnc_dtsvwrset% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBDSSET)

' check hard disk in Data Server
Declare Function cnc_dtsvchkdsk% Lib "fwlib32.dll" (ByVal FlibHndl%)

' format hard disk in Data Server
Declare Function cnc_dtsvhdformat% Lib "fwlib32.dll" (ByVal FlibHndl%)

' save interface area in Data Server
Declare Function cnc_dtsvsavecram% Lib "fwlib32.dll" (ByVal FlibHndl%)

' get interface area in Data Server
' Declare Function cnc_dtsvrdcram% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, b&, ByVal c$)  '980701
Declare Function cnc_dtsvrdcram% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, b&, c As Byte)   '980701

' read maintenance information for Data Server
Declare Function cnc_dtsvmntinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBDSMNT)

' get Data Server mode
Declare Function cnc_dtsvgetmode% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' set Data Server mode
Declare Function cnc_dtsvsetmode% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' read error message for Data Server
Declare Function cnc_dtsvrderrmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b$)

' transfar file from PC to Data Server  1999.8.23
Declare Function cnc_dtsvwrfile% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$, ByVal c%)

' transfar file from Data Server to PC  1999.8.23
Declare Function cnc_dtsvrdfile% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b$, ByVal c%)

' read the loop gain for each axis
Declare Function cnc_rdloopgain% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the actual current for each axis
Declare Function cnc_rdcurrent% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read the actual speed for each axis
Declare Function cnc_rdsrvspeed% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the operation mode
Declare Function cnc_rdopmode% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read the position deviation S
Declare Function cnc_rdposerrs% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the position deviation S1 and S2
Declare Function cnc_rdposerrs2% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPSER)

' read the position deviation Z in the rigid tap mode
Declare Function cnc_rdposerrz% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the synchronous error in the synchronous control mode
Declare Function cnc_rdsynerrsy% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the synchronous error in the rigid tap mode
Declare Function cnc_rdsynerrrg% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)

' read the spindle alarm
' Declare Function cnc_rdspdlalm% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$) '980701
Declare Function cnc_rdspdlalm% Lib "fwlib32.dll" (ByVal FlibHndl%, a As Byte)  '980701

' read the control input signal
Declare Function cnc_rdctrldi% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSPDI)

' read the control output signal
Declare Function cnc_rdctrldo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSPDO)

' read the number of controled spindle
Declare Function cnc_rdnspdl% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read Servo feedback multiplication data/
Declare Function cnc_rdsvfeedback% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBSVFBACK)

' read data from FANUC BUS
Declare Function cnc_rdfbusmem% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any)

' write data to FANUC BUS
Declare Function cnc_wrfbusmem% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any)

' read the parameter of wave diagnosis
Declare Function cnc_rdwaveprm% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As Any)

' write the parameter of wave diagnosis
Declare Function cnc_wrwaveprm% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As Any)

' read the parameter of wave diagnosis 2
Declare Function cnc_rdwaveprm2% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As Any)

' write the parameter of wave diagnosis 2
Declare Function cnc_wrwaveprm2% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As Any)

' start the sampling for wave diagnosis
Declare Function cnc_wavestart% Lib "fwlib32.dll" (ByVal FlibHndl%)

' stop the sampling for wave diagnosis
Declare Function cnc_wavestop% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read the status of wave diagnosis
Declare Function cnc_wavestat% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read the data of wave diagnosis
Declare Function cnc_rdwavedata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, d&, Odb As Any)

' read M-code group data
Declare Function cnc_rdmgrpdata% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As ODBMGRP)

' write M-code group data
Declare Function cnc_wrmgrpdata% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IDBMGRP)

' read processing time stamp data
Declare Function cnc_rdproctime% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPTIME)

' read program directory for processing time data
Declare Function cnc_rdprgdirtime% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, b%, Odb As PRGDIRTM)

' read program directory 2
#If ONO8D Then
Declare Function cnc_rdprogdir2% Lib "fwlib32.dll" Alias "cnc_rdprogdir2o8" (ByVal FlibHndl%, ByVal a%, b&, c%, Odb As Any)
#Else
Declare Function cnc_rdprogdir2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, c%, Odb As Any)
#End If

' read program directory 3
Declare Function cnc_rdprogdir3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b&, c%, Odb As Any)

' read program directory 4
Declare Function cnc_rdprogdir4% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b&, c%, Odb As Any)

' rename NC program
Declare Function cnc_renameprog% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b& )

' read DNC file name for DNC1, DNC2, OSI-Ethernet
Declare Function cnc_rddncfname% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' write DNC file name for DNC1, DNC2, OSI-Ethernet
Declare Function cnc_wrdncfname% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read communication parameter for DNC1, DNC2, OSI-Ethernet
Declare Function cnc_rdcomparam% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As IODBCPRM)

' write communication parameter for DNC1, DNC2, OSI-Ethernet
Declare Function cnc_wrcomparam% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As IODBCPRM)

' read log message for DNC2
Declare Function cnc_rdcomlogmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read operator message for DNC1, DNC2
Declare Function cnc_rdcomopemsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read recieve message for OSI-Ethernet
Declare Function cnc_rdrcvmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' read send message for OSI-Ethernet
Declare Function cnc_rdsndmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' send message for OSI-Ethernet
Declare Function cnc_sendmessage% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' clear message buffer for OSI-Ethernet
Declare Function cnc_clrmsgbuff% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' read message recieve status for OSI-Ethernet
Declare Function cnc_rdrcvstat% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read interrupt check
Declare Function cnc_rdintchk% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBINT)

' write interrupt check
Declare Function cnc_wrintchk% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBINT)

' read interrupt check information
Declare Function cnc_rdintinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, a%)

' read work coordinate shift
Declare Function cnc_rdwkcdshft% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBWCSF)

' write work coordinate shift
Declare Function cnc_wrwkcdshft% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBWCSF)

' read work coordinate shift measure
Declare Function cnc_rdwkcdsfms% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBWCSF)

' write work coordinate shift measure
Declare Function cnc_wrwkcdsfms% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBWCSF)

' stop the sampling for operator message history
Declare Function cnc_stopomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start the sampling for operator message history
Declare Function cnc_startomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read operator message history information
Declare Function cnc_rdomhisinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBOMIF)

' read operator message history
Declare Function cnc_rdomhistry% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b&, Odb As Any)

' clear operator message history
Declare Function cnc_clearomhis% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read b-axis tool offset value(area specified)
Declare Function cnc_rdbtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBBTO)

' write b-axis tool offset value(area specified)
Declare Function cnc_wrbtofsr% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IODBBTO)

' read b-axis tool offset information
Declare Function cnc_rdbtofsinfo% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBBTLINF)

' read b-axis command
Declare Function cnc_rdbaxis% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As Any)

' read current program and its pointer
Declare Function cnc_rdactpt% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, b&)

' read current program and its pointer  and UV macro pointer 
Declare Function cnc_rduvactpt% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, b&, c&)

' set current program and its pointer
Declare Function cnc_wractpt% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&, ByVal b%, c&)

' read CNC system soft series and version
Declare Function cnc_rdsyssoft% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSYSS)
